about bug fixed

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         </header>
 
         <main>
-            <article id="about" class="header-handle">
+            <article class="header-handle">
                     <div class="container">
                         <div class="main-post-title">
 
